--- a/src/style/bootstrap/scss/bootstrap.scss
+++ b/src/style/bootstrap/scss/bootstrap.scss
@@ -15,16 +15,16 @@
 // Core CSS
 @import "reboot";
 @import "type";
-@import "images";
-@import "code";
-@import "grid";
-@import "tables";
+// @import "images";
+// @import "code";
+// @import "grid";
+// @import "tables";
 @import "forms";
 @import "buttons";
 
 // Components
-@import "animation";
-@import "dropdown";
+// @import "animation";
+// @import "dropdown";
 @import "button-group";
 @import "input-group";
 @import "custom-forms";
@@ -44,10 +44,10 @@
 @import "close";
 
 // Components w/ JavaScript
-@import "modal";
-@import "tooltip";
-@import "popover";
-@import "carousel";
+// @import "modal";
+// @import "tooltip";
+// @import "popover";
+// @import "carousel";
 
 // Utility classes
 @import "utilities";
