--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,2 +1,10 @@
+/*!
+ * Codepix.io stylesheet
+ * Copyright 2015 Matt McFarland and contribs
+ * Licensed under MIT
+ */
+
+
 @import "bootstrap/scss/bootstrap";
 @import "highlight/github";
+
