--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,4 +7,6 @@
 
 @import "bootstrap/scss/bootstrap";
 @import "highlight/github";
-
+@import "mixins/tipsy";
+@import "objects/icons";
+@import "objects/tooltips";
