--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,4 +11,5 @@
 @import "objects/icons";
 @import "objects/tooltips";
 @import "objects/minicard";
-
+@import "select/scss/mixins";
+@import "select/scss/default";
